[package]
name = "rng-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "*"
rand = "*"
actix-web = "*"
serde = {version = "*", features=["derive"]}
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
